# telegram-tt

./: .babelrc  .browserslistrc  .distignore  .editorconfig  .env  .env.example  .eslintignore  .eslintrc  .fantasticonrc.cjs  .fantasticonrc.js  .gitattributes  .gitignore  .npmrc  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  MODIFICATIONS.md  NOTICE  README.md  SECURITY.md  babel.config.js  eslint.config.js  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.ts  rsbuild.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.script.json  vercel.json  vite.config.ts  vitest.config.ts  webpack-electron.config.ts  (+3 more)
.github/workflows/: check-file-sizes.yml  ci.yml  deploy-web-s3.yml  electron-release.yml  package-and-publish.yml  tests.yml
.husky/: pre-commit
deploy/: contest.sh  copy_to_dist.sh  prepareTauriConfig.js  tauri_create_dmg.sh  update_version.js
dev/: buildIcons.ts  createBundleStatsComment.ts  createPRComment.js  createStatoscopeComment.js  generateInitialLangFallback.ts  generateLangTypes.ts  icons.css.hbs  icons.scss.hbs  log.html  postcss-remove-global.ts  telegraphChangelog.js  tlHash.js  webpackContextExtension.js  wholePixel.js  wholePixel.mjs
dev/eslint-multitab/: package-lock.json  package.json
dev/icons-templates/: icons.css.template  icons.scss.template  {{previewPath}}.template
dev/localize/: auto-localize.ts  auto-relocalize.ts  en-android.json  en-ios.json  ru-ios.json
dist-svelte/: index.html  site.webmanifest  site_apple.webmanifest  site_apple_dev.webmanifest  site_dev.webmanifest  statoscope-report.html
dist-svelte/assets/: APEv2Parser-CAMkrNbL.js  APEv2Parser-CR3dYEa_.js  AbstractID3Parser-CFvAXaKF.js  ActionMessage-5OE0xIct.js  ActionMessage-5uMhsdAw.js  ActionMessage-X02NMj_O.css  AiffParser-oWORkfs8.js  AsfParser-Dy6ch3nc.js  AvatarEditable-BBpUma6y.css  AvatarEditable-CV1g088b.js  AvatarEditable-DqqcAVWt.js  BasicParser-CFNdljSt.js  CropModal-BRD9_qkN.js  CropModal-CasS4_Hy.css  CropModal-Dfoaw11a.js  DeleteMemberModal-B33exvAA.css  DeleteMemberModal-CdAIuiBA.js  DeleteMemberModal-Dtzf1C4h.js  DsdiffParser-_i4axePH.js  DsfParser-DF6REAYX.js  Experimental-DGerbrKz.tgs  FlacParser-C7CVhKvd.js  FlacParser-CSBbTlWo.js  GiftMenuItems-B-CkvoZ3.js  GiftMenuItems-BY9yZq_l.js  HandOutline-BFV3GSC4.tgs  ID3v1Parser-D8CSiXZ0.js  ID3v2Parser-CmmtIeWX.js  ID3v2Token-D8xIrRTm.js  LovelyChart-BKrI-RER.css  LovelyChart-Btc-m6ga.js  MP4Parser-zlqN8LWB.js  MatroskaParser-CS0VxHm5.js  MenuSeparator-CQWcGJSi.css  MenuSeparator.module-C7g_PR_9.js  MenuSeparator.module-DvPQzT1B.js  Modal-AZj8nE4R.js  Modal-B1oYfq-M.css  Modal-DnIuBq5Y.js  MpegParser-Bw2sMnRs.js  (+74 more)
dist-svelte/get/: index.css  unsupported.html
dist-svelte/share/: index.html
docs/: DESKTOP_BRIDGE.md  LOCALDB_EXPORT_WORKER.md  REVERT_BISECT.md  TAURI.md
mcp-server/: .gitignore  README.md  claude-desktop-config.example.json  package.json  tsconfig.json
mcp-server/src/: index.test.ts  index.ts
plugins/: gitInfo.ts
public/: _headers  background-electron-dmg.tiff  compatTest.js  electron-entitlements.mac.plist  electronVersion.txt  icon-electron-macos.icns  redirect.js  robots.txt  site.webmanifest  site_apple.webmanifest  site_apple_dev.webmanifest  site_dev.webmanifest  statoscope-report.html  unsupported.html  version.txt
public/chartDummyData/: views.json
public/charting_library/: charting_library.cjs.js  charting_library.d.ts  charting_library.esm.js  charting_library.js  charting_library.standalone.js  datafeed-api.d.ts  package.json  sameorigin.html
public/get/: index.css  index.html  index.js  mac.html  unsupported.html
public/oauth-callback/: callback.js  index.html
public/share/: index.html
src/: App.svelte  App.tsx  config.ts  index-perf.html  index-perf.tsx  index.html  index.tsx  limits.ts  main.svelte.ts  serviceWorker.ts  versionNotification.txt
src/@types/: global.d.ts  hmr.d.ts  teact.d.ts
src/bundles/: auth.ts  calls.ts  extra.ts  main.ts  stars.ts
src/components/: App.module.scss  App.tsx  splash.html
src/electron/: autoUpdates.ts  config.js  config.yml  deeplink.ts  localStorage.ts  main.ts  tray.ts  (+4 more)
tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json  tauri.macos.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/icons/macos/: icon.icns
tauri/src/: deeplink.rs  lib.rs  mac.rs  main.rs  window.rs
tauri/src/tray/: badge.rs  mod.rs
tests/: assertions.ts  config.ts  helpers.ts  init.js  initApp.tsx  messageLayout.test.tsx
(+4849 files in other folders)
