 [package]
name = "telegram_air"
version = "2.9.3"
description = "Telegram Air"
authors = ["Alexander Zinchuk"]
license = "GPLv3"
repository = "https://github.com/Ajaxy/telegram-tt"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.3", features = [ "devtools", "unstable", "config-json5", "tray-icon", "image-png"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-log = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-deep-link = "2.4.5"
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.7"
image      = "0.25.8"
imageproc  = "0.25.0"
ab_glyph   = "0.2.32"
tauri-plugin-os = "2.3.2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
rand = "0.9.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
