 [package]
name = "telegram_air"
version = "2.10.3"
description = "Telegram Air"
authors = ["Alexander Zinchuk"]
license = "GPLv3"
repository = "https://github.com/Ajaxy/telegram-tt"
edition = "2024"
rust-version = "1.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [ "devtools", "unstable", "config-json5", "tray-icon", "image-png"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-deep-link = "2.4.7"
log = "0.4.29"
uuid = { version = "1.23.0", features = ["v4"] }
url = "2.5.8"
image      = "0.25.10"
imageproc  = "0.26.1"
ab_glyph   = "0.2.32"
tauri-plugin-os = "2.3.2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
rand = "0.10.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
